# psvr-player

./: .clang-format  .gitignore  99-psvr.rules  CMakeLists.txt  README.md  README_RUS.md  compile.sh  compile_pack.sh  notes.txt
cmake/: FindHIDAPI.cmake  FindLIBVLC.cmake
libs/home-dir/: home-dir.cpp  home-dir.h
libs/iniparser/: CMakeLists.txt
misc/: windows_build.bat  windows_build.md  windows_build_rus.md  windows_deploy.bat  windows_readme.md  windows_readme_rus.md
psvr-player/: CMakeLists.txt  frame_buffer.cpp  frame_buffer.h  framepool.cpp  framepool.h  main.cpp  monitors.cpp  monitors.h  play_screen.cpp  play_screen.h  playing.cpp  playing.h  shader_program.cpp  shader_program.h  transformer.cpp  transformer.h  update_glad.sh  version.h  video_player.cpp  video_player.h  vr_helmet.cpp  vr_helmet.h  vr_helmet_calibration.cpp  vr_helmet_calibration.h  vr_helmet_hid.cpp  vr_helmet_hid.h  vr_helmet_view.cpp  vr_helmet_view.h
psvr-player/shaders/: halfcilinder.frag  output.frag  output.h  output.vert  split.frag  split.vert
psvrplayer/: CMakeLists.txt  config_file.cpp  config_file.h  frame_buffer.cpp  framepool.cpp  framepool.h  main.cpp  monitors.cpp  play_screen.cpp  playing.cpp  playing.h  psvrplayer.cpp  rotation.cpp  rotation.h  shader_program.cpp  transformer.cpp  transformer.h  version.h  video_player.cpp  video_player.h  vr_helmet.cpp  vr_helmet.h  vr_helmet_calibration.cpp  vr_helmet_calibration.h  vr_helmet_hid.cpp  vr_helmet_hid.h  vr_helmet_view.cpp  vr_helmet_view.h
psvrplayer/glad/include/glad/: glad.h
psvrplayer/glad/src/: glad.c
psvrplayer/resources/: psvrplayer.desktop
psvrplayer/shaders/: flat.frag  halfcilinder.frag.h  halfcilinder.vert  halfcilinder.vert.h  output.frag  output.frag.h  output.vert.h  split.frag  split.frag.h  split.vert.h
unittests/: CMakeLists.txt  rotation_view.cpp
